# curso-estruturas-de-dados-i

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
libs/: comments-to.py
material/: README.md
material/1-revisao-tipos/: .clang-tidy  .gitignore  CMakeLists.txt  main.cpp  main_primeiro.c  main_primeiro.cpp  main_print.cpp  main_resto.cpp  makefile  resto.cppm  resto.hpp  teste.cpp
material/3-pilhas/: CMakeLists.txt  main_pilha.cpp  main_pilha_stl.cpp  main_pilhas.cpp  pilhas.hpp  use_stack.cpp
material/4-filas/: main_fila.cpp
material/7-filas-prioridade/: .gitignore  main.cpp  makefile
material/listas-resolucao/: .gitignore  lista1.cpp  lista2.cpp  makefile
material/outros/: .gitignore  IgorMachadoCoelho.hpp  Lista Prática 1 – Estruturas de Dados I.docx  README.md  makefile  teste_prof.cpp
slides/0-intro-curso/: 0-intro-curso.md  index.html
slides/0-intro-curso-uff-pgc-eda-2021-1/: 0-intro-curso.md  header.tex  index.html
slides/0-intro-curso-uff-pgc-eda-2021-1/codes/: example.py
slides/0-intro-curso-uff-si-2020-1/: .gitignore  general.css  reveal-beamer.css  simple.tex  slides-po-1.md
slides/0-intro-curso-uff-si-2020-1/codes/: cat_echo.sh  run_latex.sh  standalone_algo.sh
slides/0-intro-curso-uff-si-2020-1/figs/: pseudo2.svg.tex
slides/0-intro-curso-uff-si-2020-1/reveal.js/: package-lock.json
slides/0-intro-curso-uff-si-2020-2/: 0-intro-curso-parte-algo.md  0-intro-curso.md  index.html  makefile
slides/0-intro-curso-uff-si-2020-2/codes/: example.cpp
slides/1-revisao-tipos/: 1-revisao-tipos.md  header.tex  index.html  makefile
slides/1-revisao-tipos/cpp-tests/: .gitignore  main.cpp  makefile
slides/2-sacos/: 2-sacos.md  header.tex  index.html  makefile
slides/2-sacos/impl/: ListaEncadeada.hpp  SacoTAD.hpp  SacoVetor.hpp  main.cpp  makefile
slides/3-pilhas/: 3-pilhas.md  index.html  makefile
slides/4-filas/: 4-filas.md  header.tex  index.html  makefile
slides/4-filas/codes/: run_cpp.sh
slides/5-arvores/: 5-arvores.md  index.html  makefile
slides/6-dicionarios/: 6-dicionarios.md  index.html  makefile
slides/6-dicionarios/codes/: run_python3.sh
slides/7-filas-prioridade/: 7-filas-prioridade.md  header.tex  index.html  makefile
slides/7-filas-prioridade/codes/: run_python2.sh
slides/7-filas-prioridade/tex/: test.fdb_latexmk  test.fls  test.tex
uerj-ccomp-alg-2021-1/: README.md
uff-edsi-2020-1/: README.md
uff-edsi-2020-2/: README.md
uff-edsi-2021-1/: README.md
uff-edsi-2021-2/: README.md
uff-pgc-eda-2021-1/: README.md
